# szkolenie_dl_04102025

./: .gitignore  ORGANIZACJA-ZAJEC.ipynb  README.ipynb  pyproject.toml
CWICZENIA/: 20_backpropagation.ipynb  31-Neural-Network-Exercises-SolutionsPL.ipynb  31-Neural-Network-Exercises.ipynb  PyTorch-Basics-ExercisesPL.ipynb  TensorFlow-Basics-Exercises.ipynb  backpropagation.ipynb  cwiczenie_perceptron.ipynb  wzrost_waga.txt
KURSANT/: Perceptron.ipynb  info.md  metryki.ipynb
MATERIALY/00_wprowadzenie/: 00_przeglad_zastoswan.ipynb  01_Metryki.ipynb  02_typy_danych_w_statystyce_i_ML.ipynb  03_embedingi.ipynb  10_sieci_neuronowe_i_deep_learning.ipynb  20_backpropagation.ipynb  50-Cross-Validation.ipynb
MATERIALY/00_wprowadzenie_do_DL/: 01_metryki.ipynb  02_typy_danych_w_statystyce_i_ML.ipynb  10_sieci_neuronowe_i_deep_learning.ipynb  11_cwiczenie_perceptron-rozwiazanie.ipynb  11_cwiczenie_perceptron.ipynb  20_backpropagation.ipynb  50-Cross-Validation.ipynb
MATERIALY/10_podstawy_pytorch/: 00-Tensor-BasicsPL.ipynb  01-Tensor-OperationsPL.ipynb  02-DataSets-with-PytorchPL.ipynb  03-PyTorch-Basics-ExercisesPL.ipynb  03b-PyTorch-Basics-Exercises-SolutionsPL.ipynb  04-GPU-i-inne-CUDA.ipynb  07-zapis-i-odczyt-modelu-w-pytorch.ipynb  simple_regressor.pt  simple_regressor_full.pth
MATERIALY/15_podstawy_tensorflow/: model.h5  (+6 more)
ZAJECIA/: 001_przeglad_zastosowan.ipynb  01_Metryki.ipynb  02_typy_danych.ipynb  10_Perceptron.ipynb  15_pytorch.ipynb  15_tensorflow.ipynb  FarePred.ipynb  Untitled.ipynb  regresja_logistyczna.ipynb  spirale.ipynb  tensorflow_examples.ipynb
(+37 files in other folders)
